# MCP_Server_Project

./: LICENCE  README.md  pyproject.toml  weather.py
.github/workflows/: publish.yml
