[project]
name = "mcp-weather-server" 
version = "0.1.0"
description = "MCP server for fetching weather forecasts and alerts from US National Weather Service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mcp>=1.19.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


